# ragflow-knowledge-mcp-server

./: .gitignore  README.md  pyproject.toml  pytools.sh
docker/0.1.0/: .env  Dockerfile  build.sh  config.yaml  docker-compose-up-d.bat  docker-compose-up-d.sh  docker-compose.yml  run-in-docker.bat  run-in-docker.sh
src/ragflow_knowledge_mcp_server/: __init__.py  __main__.py  logger.py  server.py  utils.py
src/ragflow_knowledge_mcp_server/properties/: Dataset.py  MCPServerProperties.py  __init__.py
src/ragflow_knowledge_mcp_server/ragflow/: RAGFlowError.py  RAGFlowKnowledgeAPI.py  __init__.py  get_documents_types.py  list_knowledge_bases_types.py  retrieve_chunks_types.py
src/ragflow_knowledge_mcp_server/schema/: KnowledgeBase.py  __init__.py  exceptions.py  get_document_types.py  list_knowledge_bases_types.py  search_knowledge_types.py
src/ragflow_knowledge_mcp_server/service/: __init__.py  get_knowledge_base.py  list_knowledge_bases.py  search_knowledge.py
tests/: test_SearchKnowledgeResult.py  test_get_knowledge_base.py  test_list_knowledge_bases.py  test_retrieve_chunks.py  test_search_knowledge.py  test_utils.py
